--- a/public_html/css/datepicker.css
+++ b/public_html/css/datepicker.css
@@ -6,184 +6,108 @@
  * http://www.apache.org/licenses/LICENSE-2.0
  *
  */
-.datepicker {
-  top: 0;
-  left: 0;
-  padding: 4px;
-  margin-top: 1px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  /*.dow {
-    border-top: 1px solid #ddd !important;
-  }*/
+.datepicker { top: 0;left: 0;padding: 4px;margin-top: 1px;-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;}
+.datepicker:before {content: '';display: inline-block;border-left: 7px solid transparent;border-right: 7px solid transparent;border-bottom: 7px solid #ccc;border-bottom-color: rgba(0, 0, 0, 0.2);position: absolute;top: -7px;left: 6px;}
+.datepicker:after {content: '';display: inline-block;border-left: 6px solid transparent;border-right: 6px solid transparent;border-bottom: 6px solid #ffffff;position: absolute;top: -6px;left: 7px;}
+.datepicker > div {display: none;}
+.datepicker table {width: 100%;margin: 0;}
+.datepicker td, .datepicker th {text-align: center;width: 20px;height: 20px;-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;}
+.datepicker td.day:hover {background: #eeeeee;cursor: pointer;}
+.datepicker td.day.disabled {color: #d6d5d5; /*Línea insertada 08.07.2016*/cursor: auto; /*Línea insertada 08.07.2016*/}
+.datepicker td.new, .datepicker td.old, .day { color: #00345e; }
+.datepicker td.active, .datepicker td.active:hover {
+  color: #ffffff; background-color: #006dcc; background-image: -moz-linear-gradient(top, #0088cc, #0044cc); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
+  background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);background-image: -o-linear-gradient(top, #0088cc, #0044cc);background-image: linear-gradient(to bottom, #0088cc, #0044cc);
+  background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0); border-color: #0044cc #0044cc #002a80;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); *background-color: #0044cc;filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);color: #fff;text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
-.datepicker:before {
-  content: '';
-  display: inline-block;
-  border-left: 7px solid transparent;
-  border-right: 7px solid transparent;
-  border-bottom: 7px solid #ccc;
-  border-bottom-color: rgba(0, 0, 0, 0.2);
-  position: absolute;
-  top: -7px;
-  left: 6px;
+.datepicker td.active:hover, .datepicker td.active:hover:hover, .datepicker td.active:focus, .datepicker td.active:hover:focus, .datepicker td.active:active,.datepicker td.active:hover:active,
+.datepicker td.active.active, .datepicker td.active:hover.active{color: #ffffff; background-color: #0044cc; *background-color: #003bb3;}
+.datepicker td.active.disabled, .datepicker td.active:hover.disabled, .datepicker td.active[disabled],.datepicker td.active:hover[disabled] {color: #ffffff; background-color: #7089bd;*background-color: #7089bd; cursor: auto;}
+.datepicker td.active:active, .datepicker td.active:hover:active, .datepicker td.active.active, .datepicker td.active:hover.active {background-color: #003399 \9;}
+.datepicker td span { display: block;width: 47px;height: 54px;line-height: 54px;float: left;margin: 2px;cursor: pointer;-webkit-border-radius: 4px;-moz-border-radius: 4px;border-radius: 4px;}
+.datepicker td span:hover {background: #eeeeee;}
+.datepicker td span.active { color: #ffffff;background-color: #006dcc;background-image: -moz-linear-gradient(top, #0088cc, #0044cc);background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);background-image: -o-linear-gradient(top, #0088cc, #0044cc);
+  background-image: linear-gradient(to bottom, #0088cc, #0044cc);background-repeat: repeat-x;filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);border-color: #0044cc #0044cc #002a80;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25); *background-color: #0044cc;filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);color: #fff;text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
-.datepicker:after {
-  content: '';
-  display: inline-block;
-  border-left: 6px solid transparent;
-  border-right: 6px solid transparent;
-  border-bottom: 6px solid #ffffff;
-  position: absolute;
-  top: -6px;
-  left: 7px;
-}
-.datepicker > div {
-  display: none;
-}
-.datepicker table {
-  width: 100%;
-  margin: 0;
-}
-.datepicker td,
-.datepicker th {
-  text-align: center;
-  width: 20px;
-  height: 20px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-}
-.datepicker td.day:hover {
-  background: #eeeeee;
-  cursor: pointer;
-}
-.datepicker td.day.disabled {
-  /*color: #eeeeee;*/
-  color: #d6d5d5; /*Línea insertada 08.07.2016*/
-  cursor: auto; /*Línea insertada 08.07.2016*/
-}
-.datepicker td.new, .datepicker td.old { color: #00345e; }
-.datepicker td.active,
-.datepicker td.active:hover {
-  color: #ffffff;
-  background-color: #006dcc;
-  background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
-  background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -o-linear-gradient(top, #0088cc, #0044cc);
-  background-image: linear-gradient(to bottom, #0088cc, #0044cc);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
-  border-color: #0044cc #0044cc #002a80;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  *background-color: #0044cc;
-  /* Darken IE7 buttons by default so they stand out more given they won't have borders */
-
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-  color: #fff;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-}
-/*08.07.2016 eliminé td.active.disabled para sacarlos en nueva clase css*/
-.datepicker td.active:hover,
-.datepicker td.active:hover:hover,
-.datepicker td.active:focus,
-.datepicker td.active:hover:focus,
-.datepicker td.active:active,
-.datepicker td.active:hover:active,
-.datepicker td.active.active,
-.datepicker td.active:hover.active
- {
-  color: #ffffff;
-  background-color: #0044cc;
-  *background-color: #003bb3;
-}
-.datepicker td.active.disabled,
-.datepicker td.active:hover.disabled,
-.datepicker td.active[disabled],
-.datepicker td.active:hover[disabled] {
-  color: #ffffff;
-  background-color: #7089bd;
-  *background-color: #7089bd;
-  cursor: auto;
-}
-.datepicker td.active:active,
-.datepicker td.active:hover:active,
-.datepicker td.active.active,
-.datepicker td.active:hover.active {
-  background-color: #003399 \9;
-}
-.datepicker td span {
-  display: block;
-  width: 47px;
-  height: 54px;
-  line-height: 54px;
-  float: left;
-  margin: 2px;
-  cursor: pointer;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-}
-.datepicker td span:hover {
-  background: #eeeeee;
-}
-.datepicker td span.active {
-  color: #ffffff;
-  background-color: #006dcc;
-  background-image: -moz-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0044cc));
-  background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
-  background-image: -o-linear-gradient(top, #0088cc, #0044cc);
-  background-image: linear-gradient(to bottom, #0088cc, #0044cc);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0044cc', GradientType=0);
-  border-color: #0044cc #0044cc #002a80;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  *background-color: #0044cc;
-  /* Darken IE7 buttons by default so they stand out more given they won't have borders */
-
-  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
-  color: #fff;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-}
-.datepicker td span.active:hover,
-.datepicker td span.active:focus,
-.datepicker td span.active:active,
-.datepicker td span.active.active
-{
-  color: #ffffff;
-  background-color: #0044cc;
-  *background-color: #003bb3;
-}
-/*Modificado 08.07.2016*/
-.datepicker td span.active.disabled,
-.datepicker td span.active[disabled] {
-  color: #ffffff;
-  background-color: #7089bd;
-  *background-color: #7089bd;
-  cursor: auto;
-}
-
-.datepicker td span.active:active,
-.datepicker td span.active.active {
-  background-color: #003399 \9;
-}
-.datepicker td span.old {
-  color: #999999;
-}
-.datepicker th.switch {
-  width: 145px;
-}
-.datepicker th.next,
-.datepicker th.prev {
-  font-size: 21px;
-}
-.datepicker thead tr:first-child th {
-  cursor: pointer;
-}
+.datepicker td span.active:hover,.datepicker td span.active:focus,.datepicker td span.active:active,.datepicker td span.active.active{ color: #ffffff;background-color: #0044cc;*background-color: #003bb3;}
+.datepicker td span.active.disabled,.datepicker td span.active[disabled] {color: #ffffff;background-color: #7089bd;*background-color: #7089bd;cursor: auto;}
+.datepicker td span.active:active,.datepicker td span.active.active {background-color: #003399 \9;}
+.datepicker td span.old {color: #999999;}
+.datepicker th.switch {width: 145px;}
+.datepicker th.next,.datepicker th.prev {font-size: 21px;}
+.datepicker thead tr:first-child th {cursor: pointer;}
 .datepicker thead tr:first-child th:hover { background: #eeeeee; }
 .input-append.date .add-on i, .input-prepend.date .add-on i { display: block; cursor: pointer; width: 16px; height: 16px;}
 
-/*no-drop*/
+
+/**************************************
+ * Bootstrap-select v1.6.4 (http://silviomoreto.github.io/bootstrap-select)
+ *
+ * Copyright 2013-2015 bootstrap-select
+ * Licensed under MIT (https://github.com/silviomoreto/bootstrap-select/blob/master/LICENSE)
+ */
+
+.bootstrap-select { width: 220px \0; /* IE9 and below */ }
+.bootstrap-select > .btn { width: 100%; padding-right: 25px; }
+.has-error .bootstrap-select .dropdown-toggle,
+.error .bootstrap-select .dropdown-toggle { border-color: #000; }
+.bootstrap-select.fit-width { width: auto !important; }
+.bootstrap-select:not([class*="col-"]):not([class*="form-control"]):not(.input-group-btn) { width: 220px; }
+.bootstrap-select.form-control { margin-bottom: 0; padding: 0;border: none;}
+.bootstrap-select.form-control:not([class*="col-"]) {width: 100%;}
+.bootstrap-select.form-control.input-group-btn {z-index: auto;}
+.bootstrap-select.btn-group:not(.input-group-btn),
+.bootstrap-select.btn-group[class*="col-"] {float: none;display: inline-block;margin-left: 0;}
+.bootstrap-select.btn-group.dropdown-menu-right,
+.bootstrap-select.btn-group[class*="col-"].dropdown-menu-right,
+.row .bootstrap-select.btn-group[class*="col-"].dropdown-menu-right { float: right;}
+.form-inline .bootstrap-select.btn-group,
+.form-horizontal .bootstrap-select.btn-group,
+.form-group .bootstrap-select.btn-group { margin-bottom: 0;}
+.form-group-lg .bootstrap-select.btn-group.form-control,
+.form-group-sm .bootstrap-select.btn-group.form-control { padding: 0;}
+.form-inline .bootstrap-select.btn-group .form-control { width: 100%;}
+.bootstrap-select.btn-group > .disabled { cursor: not-allowed;}
+.bootstrap-select.btn-group > .disabled:focus {outline: none !important; }
+.bootstrap-select.btn-group .btn .filter-option { display: inline-block; overflow: hidden; width: 100%; text-align: left;}
+.bootstrap-select.btn-group .btn .caret { position: absolute; top: 50%; right: 12px; margin-top: -2px; vertical-align: middle;}
+.bootstrap-select.btn-group[class*="col-"] .btn { width: 100%; }
+.bootstrap-select.btn-group .dropdown-menu { min-width: 100%; z-index: 1035; -webkit-box-sizing: border-box;-moz-box-sizing: border-box; box-sizing: border-box;}
+.bootstrap-select.btn-group .dropdown-menu.inner {position: static;float: none;border: 0;padding: 0;margin: 0;border-radius: 0;-webkit-box-shadow: none;box-shadow: none;}
+.bootstrap-select.btn-group .dropdown-menu li {position: relative;}
+.bootstrap-select.btn-group .dropdown-menu li.dropdown-header {cursor: default;}
+.bootstrap-select.btn-group .dropdown-menu li.active small {color: #fff;}
+.bootstrap-select.btn-group .dropdown-menu li.disabled a {cursor: not-allowed;}
+.bootstrap-select.btn-group .dropdown-menu li a {cursor: pointer;}
+.bootstrap-select.btn-group .dropdown-menu li a.opt {position: relative;padding-left: 2.25em;}
+.bootstrap-select.btn-group .dropdown-menu li a span.check-mark {display: none;}
+.bootstrap-select.btn-group .dropdown-menu li a span.text {display: inline-block;}
+.bootstrap-select.btn-group .dropdown-menu li small {padding-left: 0.5em;}
+.bootstrap-select.btn-group .dropdown-menu li .media {display: inline-block;}
+.bootstrap-select.btn-group .dropdown-menu li .media-body {vertical-align: middle;white-space: normal;}
+.bootstrap-select.btn-group .dropdown-menu .notify { position: absolute;bottom: 5px;width: 96%;margin: 0 2%;min-height: 26px;padding: 3px 5px;background: #f5f5f5;border: 1px solid #e3e3e3;-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  pointer-events: none;opacity: 0.9;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;}
+.bootstrap-select.btn-group .no-results {padding: 3px;background: #f5f5f5;margin: 0 5px;}
+.bootstrap-select.btn-group.fit-width .btn .filter-option {position: static;}
+.bootstrap-select.btn-group.fit-width .btn .caret {position: static;top: auto;margin-top: -1px;}
+.bootstrap-select.btn-group.show-tick .dropdown-menu li.selected a span.check-mark {position: absolute;display: inline-block;right: 15px;margin-top: 5px;}
+.bootstrap-select.btn-group.show-tick .dropdown-menu li a span.text { margin-right: 34px;}
+.bootstrap-select.show-menu-arrow.open > .btn { z-index: 1036;}
+.bootstrap-select.show-menu-arrow .dropdown-toggle:before {content: '';border-left: 7px solid transparent;border-right: 7px solid transparent;border-bottom: 7px solid rgba(204, 204, 204, 0.2);position: absolute;bottom: -4px;left: 9px;display: none;}
+.bootstrap-select.show-menu-arrow .dropdown-toggle:after {content: '';border-left: 6px solid transparent;border-right: 6px solid transparent;border-bottom: 6px solid white;position: absolute;bottom: -4px;left: 10px;display: none;}
+.bootstrap-select.show-menu-arrow.dropup .dropdown-toggle:before {bottom: auto;top: -3px;border-top: 7px solid rgba(204, 204, 204, 0.2);border-bottom: 0;}
+.bootstrap-select.show-menu-arrow.dropup .dropdown-toggle:after {bottom: auto;top: -3px;border-top: 6px solid white;border-bottom: 0;}
+.bootstrap-select.show-menu-arrow.pull-right .dropdown-toggle:before {right: 12px;left: auto;}
+.bootstrap-select.show-menu-arrow.pull-right .dropdown-toggle:after {right: 13px; left: auto;}
+.bootstrap-select.show-menu-arrow.open > .dropdown-toggle:before,
+.bootstrap-select.show-menu-arrow.open > .dropdown-toggle:after {display: block;}
+.bs-searchbox,.bs-actionsbox,.bs-donebutton {padding: 4px 8px;}
+.bs-actionsbox {float: left;width: 100%;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;}
+.bs-actionsbox .btn-group button {width: 50%;}
+.bs-donebutton {float: left;width: 100%;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;}
+.bs-donebutton .btn-group button {width: 100%;}
+.bs-searchbox + .bs-actionsbox {padding: 0 8px 4px;}
+.bs-searchbox input.form-control {margin-bottom: 0;width: 100%;}
+.mobile-device {position: absolute !important;top: 0;left: 0;display: block !important;width: 100%;height: 100% !important;opacity: 0;}
