--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -29,7 +29,7 @@ and (max-device-width : 1024px)  {
 @media only screen
 and (min-device-width : 768px)
 and (max-device-width : 1024px)  {
-	.booking{color: #000;padding-top: 20px;padding-bottom: 60px !important;background-color: #2C76B5;}
+	/*.booking{color: #000;padding-top: 20px;padding-bottom: 60px !important;background-color: #2C76B5;}*/
 	.navbar-header {float: none;}
 	.navbar-left,.navbar-right {float: none !important;}
 	.navbar-toggle {display: block;}
@@ -225,7 +225,7 @@ footer .footerMensaje p {text-align: justify;}
 a.btnOfferResort i.fa.fa-tag.fac { padding-right: 4px; }
 
 @media (max-width:767px) {
-	.booking{color: #000;padding-top: 20px;padding-bottom: 20px !important;background-color: #d5d5d5;}
+	/*.booking{color: #000;padding-top: 20px;padding-bottom: 20px !important;background-color: #d5d5d5;}*/
 	.navbar-brand>img {display: block;margin: 5px;width: 180px;}
 	.footerMenu {padding: 50px 15px 80px;}
 	.navbar-brand {float: left;padding: 12px 15px;font-size: 18px;line-height: 20px;height: 70px;}
