--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -83,8 +83,8 @@ form > * {font-family: 'Oswald', sans-serif; font-weight: 300;}
 .navInfoSubmenu li a {color: white !important;font-weight: 300;}
 .navInfoSubmenu li a:hover {background: none;}
 .txtright {text-align: right !important;}
-/*.menuBook {  background:#ff6600;  font-weight: bold;}
-.menuBook:hover {background:#FF7119 !important;color:#FFE51E !important;}*/
+a.btnOfferResort.menuBook{  background:#ff6600;}
+/*.menuBook:hover {background:#FF7119 !important;color:#FFE51E !important;}*/
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {background-color: #0074d8;color: #fff;}
 .booking {background-color: #d5d5d5;padding-bottom: 15px;padding-top: 10px;}
 .btn {padding: 6px auto !important;border-radius: 0;}
@@ -220,12 +220,12 @@ footer .footerMensaje p {text-align: justify;}
 .offerInfo{background-color: #999; padding: 10px 0; text-align: center; color: #fff; font-size: 16px; font-weight: bold;}
 .cookies-policy{ display:none; text-align: center; width: 100%; color: rgb(0, 0, 0); font-family: Helvetica, sans-serif; font-size: 12px; border-top-width: 1px; border-top-style: solid; border-top-color: rgb(68, 68, 68); position: fixed; bottom: 0px; background-color: rgb(204, 204, 204); z-index: 100; padding: 15px;}
 .pointer{ cursor: pointer; }
-.btnOfferResort{ padding: 12px 28px 9px 28px; background-color: #0074D8; color: white; font-family: 'Oswald', sans-serif; font-weight: 300; font-size: 18px;text-decoration: none;display: inline-flex;}   
+.btnOfferResort{ padding: 1% 5% 1% 5%; background-color: #0074D8; color: white; font-family: 'Oswald', sans-serif; font-weight: 300; font-size: 18px;text-decoration: none;display: inline-flex;}   
 .btnOfferResort:hover { background-color: #ff6600; color: #fff; text-decoration: none; }
-a.btnOfferResort i.fa.fa-tag.fac { padding-right: 4px; }
+a.btnOfferResort i { padding-right: 4px; padding-top: 4px; }
 
 @media (max-width:767px) {
-	/*.booking{color: #000;padding-top: 20px;padding-bottom: 20px !important;background-color: #d5d5d5;}*/
+	.btnOfferResort{ width: 48%; padding: 1% 4% 1% 4%;  margin: 5px 0; }   
 	.navbar-brand>img {display: block;margin: 5px;width: 180px;}
 	.footerMenu {padding: 50px 15px 80px;}
 	.navbar-brand {float: left;padding: 12px 15px;font-size: 18px;line-height: 20px;height: 70px;}
