--- a/public_html/fb_pages/css/main.css
+++ b/public_html/fb_pages/css/main.css
@@ -6,41 +6,14 @@ Edited	: ggarcia
 */
 body { font-size: 16px !important; color:#666;}
 h1 {font-family: 'Roboto Condensed', sans-serif !important; color: #0074d8;font-size: 3em !important;margin: 70px 0 50px;  border-bottom: 1px solid #d5d5d5 !important;padding: 0 0 20px; text-align: center;text-transform: uppercase;}
-h2, h3, h4, h5, h6 { font-size: 24px;margin-top: 0px;margin-bottom: 40px; font-family: 'Oswald', sans-serif;text-transform: uppercase;color:#454545;}
-.header-area {background: none repeat scroll 0 0 #003c72;}
-.header-area a {color: #FFF;}
-.user-menu ul {list-style: outside none none;margin: 0;padding: 0;}
-.user-menu li {	display: inline-block;}
-.user-menu li a {display: block;font-size: 13px;margin-right: 5px;padding: 10px;}
-.user-menu li a i.fa {margin-right: 5px;}
-.header-right ul.list-inline {margin: 0;text-align: right;}
-.header-right ul.list-inline li a {display: block;padding: 9px;}
-.header-right ul.list-inline li ul a {padding: 5px 15px;}
-.header-right ul.list-inline li ul {border: medium none;border-radius: 0;left: 50%;margin-left: -50px;min-width: 100px;text-align: center;}
-.navbar{border-radius: 0px !important;margin-bottom: 0px !important;}
-.navbar-brand {float: left;padding: 6px 15px;font-size: 18px;line-height: 20px;height: 70px;}
-.navbar-default .navbar-toggle .icon-bar {background-color: #fff;}
+h2 { font-size: 24px;margin: 10px 0 20px 0; font-family: 'Oswald', sans-serif;text-transform: uppercase;color:#454545;}
+h3 { font-size: 20px;margin:10px 0 20px 0; font-family: 'Oswald', sans-serif;text-transform: uppercase;color:#454545;}
 
-@media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px)  {
-.list-unstyled.list-inline.navInfo li {float: left;font-size: 0.96em;}
-}
-@media only screen
-and (min-device-width : 768px)
-and (max-device-width : 1024px)  {
-	/*.booking{color: #000;padding-top: 20px;padding-bottom: 60px !important;background-color: #2C76B5;}*/
-	.navbar-header {float: none;}
-	.navbar-left,.navbar-right {float: none !important;}
-	.navbar-toggle {display: block;}
-	.navbar-collapse {border-top: 1px solid transparent;box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);}
-	.navbar-fixed-top {top: 0;border-width: 0 0 1px;}
-	.navbar-collapse.collapse {display: none!important;}
-	.navbar-nav {float: none!important;margin-top: 7.5px;}
-	.navbar-nav>li {float: none;}
-	.navbar-nav>li>a {padding-top: 10px;padding-bottom: 10px;}
-	.collapse.in{display: block !important;}
-}
+.center{ text-align: center; }
+.tx-white{ color: white; }
+
+.header-area {background: none repeat scroll 0 0 #003c72;}
+
 
 .carousel-caption {color: #000;top: auto;bottom: -20px;right: 0%;left: 0%;padding-bottom: 10px;}
 .carousel-caption p {color: #FFF;background-color: rgba(0,0,0,.3);text-align: center !important;padding-left: 10px;font-size: 20px;}
@@ -50,7 +23,6 @@ and (max-device-width : 1024px)  {
 small, .small {font-size: 80%;}
 .room {padding-top: 10px;}
 .room ul{	width: 50%; float: left;}
-#map-container {height: 468px;}
 .resort{position: relative;min-height: 500px;}
 .resort span{font-size: 24px;margin-top: 20px;margin-bottom: 10px;color: #337ab7;text-decoration: none;}
 .resort label{font-size: 20px;margin-top: 10px;margin-bottom: 10px;color: #FF7119;position: absolute;bottom: 0;}
@@ -64,8 +36,7 @@ small, .small {font-size: 80%;}
 .experience span{font-size: 24px;margin-top: 20px;margin-bottom: 10px;color: #337ab7;text-decoration: none;}
 .experience label{font-size: 20px;margin-top: 10px;margin-bottom: 10px;color: #FF7119;position: absolute;bottom: 0;}
 .labelSmall {font-size: 14px !important;margin: 9px -3px !important;}
-#CDSWIDSSP {width: 100% !important;}
-#CDSWIDSSP.widSSPnarrow .widSSPData .widSSPBranding dd {width: 100% !important;}
+
 .short_offer span{font-size: 24px;color: #000;}
 p a {color: #0074d8;font-weight: bold;text-decoration:none;}
 p a:hover {color: #0074d8;text-decoration: underline;}
@@ -77,16 +48,11 @@ p a:hover {color: #0074d8;text-decoration: underline;}
 .offer label,
 .package label {font-family: "Roboto Condensed",sans-serif !important;font-size: 16px;margin-top: 0px;color: white;font-weight: 400;width: 100%;text-align: center;background: #0074d8;padding: 10px;}
 form > * {font-family: 'Oswald', sans-serif; font-weight: 300;}
-.navInfo {font-family: 'Oswald', sans-serif;}
-.navInfo {font-weight: 300;}
-.navInfoSubmenu {background: #003C72;}
-.navInfoSubmenu li a {color: white !important;font-weight: 300;}
-.navInfoSubmenu li a:hover {background: none;}
+
 .txtright {text-align: right !important;}
-/*.menuBook {  background:#ff6600;  font-weight: bold;}
-.menuBook:hover {background:#FF7119 !important;color:#FFE51E !important;}*/
-.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {background-color: #0074d8;color: #fff;}
-.booking {background-color: #d5d5d5;padding-bottom: 15px;padding-top: 10px;}
+
+.booking-offers {background-color: #d5d5d5;padding-bottom: 15px;padding-top: 10px; max-width: 563px; margin: auto; height: 60px;}
+.booking {background-color: #d5d5d5;padding-bottom: 15px;padding-top: 10px; margin: auto;}
 .btn {padding: 6px auto !important;border-radius: 0;}
 .btn-primary {color: #fff;background-color: #0074d8;border-color: #0074d8;width: 33%;margin: 2px 0;}
 .btn-primary:hover, .btn-primary:active, .btn-primary:focus {background-color: #ff6600;border-color: #ff6600;}
@@ -112,20 +78,13 @@ ul.dropdown-menu.inner li.selected{ background-color: #0074d8;}
 .btn-success {background-color: #0074d8;border-color: #0074d8;}
 .btn-success:hover, .btn-success:active, .btn-success:focus {background-color: #ff6600;border-color: #ff6600;}
 .mayusculas {text-transform: uppercase;}
-.navGeneralSubmenu ul {background: #00345E;font-size: 16px;}
-.navGeneralSubmenu > ul li a {color: white;font-weight: 300}
 .clear {clear: both;}
-.dropdown-header {color: #0074d8;}
 #h1_content {margin:0 0 40px;text-align: center;}
 #h2_content, #h3_content {text-align: justify;}
 .allInclusivecontent {text-align: justify;}
 .marco {border: 4px solid white;box-shadow: 3px 3px 10px #d5d5d5, -3px -3px 10px #d5d5d5;}
+.marco-c {border: 4px solid white;box-shadow: 3px 3px 10px #d5d5d5, -3px -3px 10px #d5d5d5; margin: auto;}
 .marcosin {box-shadow:none;}
-footer {background: #00345E;margin-top:100px;}
-.footerNewsletter {background: #003C72;}
-.footerNewsletter form label {font-family: "Roboto Condensed",sans-serif;color: #fff;font-weight: 300;}
-.footerMenu {padding: 50px 0 80px;}
-.footerMenu p {color: white;font-weight: 300;}
 input[type="submit"], input[type="text"] {border: 0 none;color: #666;height: 32px;}
 input[type="submit"] {background: #ff6600;color: white !important;padding: 5px 45px;}
 input[type="text"] {background: white;color: #666;padding: 5px 10px;width: 30%;}
@@ -145,14 +104,12 @@ footer input[type="text"] {font-family: 'Roboto Condensed', sans-serif;}
 .margint50 {margin-top:50px;}
 .cl500 {color: #0074d8;font-weight: bold;padding: 10px 0;}
 .marcoInferior {background: rgba(0, 0, 0, 0) linear-gradient(to bottom, #eaeaea 0%, #fff 100%) repeat scroll 0 0;padding: 35px 25px;border-left: 3px solid white;}
+.marcoInferior-c {background: rgba(0, 0, 0, 0) linear-gradient(to bottom, #eaeaea 0%, #fff 100%) repeat scroll 0 0;padding: 35px 25px;border-left: 3px solid white; margin: auto; max-width: 563px; margin-bottom: 15px;}
 .marcoHeightRooms {min-height: 300px;}
 .marcoHeightDining {min-height: 200px;}
 .espacioFooter {margin: 15px 0;}
 .listados ul {list-style: none;margin: 0;padding: 0;}
-footer a:hover, a:focus {color: white;text-decoration: none;}
-footer .encabezadoFooter {color: #ff6600;text-transform: uppercase;font-weight: bold;font-size: 18px;border-bottom: 1px solid;margin-bottom: 15px;padding-bottom: 3px;}
-footer .subTitulo {color:white;}
-footer .footerMensaje p {text-align: justify;}
+
 .tituloHoteles > a {color: #0074d8;font-family: "oswald", sans-serif;;}
 .short_description {margin: 20px 0 50px;text-align: justify;}
 .short_offer {
@@ -185,8 +142,9 @@ footer .footerMensaje p {text-align: justify;}
 .hotelRooms strong {color: #0074d8;font-family: "oswald", sans-serif;text-transform: uppercase; font-size: 1.2em;}
 .accommodation_description {display: table;margin: 25px 0;width: 100%;}
 .accommodation_description ul {margin: 0;padding: 0 0 0 20px;}
-.btn-danger {color: #fff;background-color: #ff6600;border-color: #ff6600;padding: 20px;}
+.btn-danger, .btn-danger:focus  {color: #fff;background-color: #ff6600;border-color: #ff6600;padding: 20px;}
 .btn-danger:hover {background-color: #0074d8;border:1px solid #0074d8;}
+.book, .book:hover, .book:focus {color: #fff;background-color: #ff6600;border-color: #ff6600;}
 .hotelDining,.hotelActivities {margin-bottom: 50px;}
 .hotelDiningTitulo strong {text-transform: uppercase;color:#0074d8;font-family: 'oswald';}
 .dining_description, .activity_description {text-align: justify;margin-top: 15px;}
@@ -204,9 +162,8 @@ footer .footerMensaje p {text-align: justify;}
 
 .btnTemporal {background: #ff6600;border:1px solid #ff6600;}
 .btnTemporal:hover {background: #0074d8; border: #0074d8}
-.fa-star,
-.fa-star-half-o {color: #e2c004;}
-/*.btn-oferta{font-size: 1.4em; padding: 0;margin: 0;}*/
+
+
 
 .cl700{background: #d60000 none repeat scroll 0 0;color: #fff;font-weight: normal; border-radius: 4px;font-size: .7em; padding: 3px; margin-right: 5px;display: inline-block;vertical-align: text-top;}
 .cl701{vertical-align: text-top;}
@@ -235,7 +192,6 @@ optgroup{ color:#0074d8 ;}
 optgroup option{ color:#666 ;}
 
 @media (max-width:767px) {
-	/*.booking{color: #000;padding-top: 20px;padding-bottom: 20px !important;background-color: #d5d5d5;}*/
 	.navbar-brand>img {display: block;margin: 5px;width: 180px;}
 	.footerMenu {padding: 50px 15px 80px;}
 	.navbar-brand {float: left;padding: 12px 15px;font-size: 18px;line-height: 20px;height: 70px;}
