--- a/public_html/fb_pages/css/main.css
+++ b/public_html/fb_pages/css/main.css
@@ -124,7 +124,7 @@ footer input[type="text"] {font-family: 'Roboto Condensed', sans-serif;}
 	width: 60%;height: 40px;position: absolute;top: 10px;left: 10px;z-index: 6;border: 1px dotted white;border-left: none;box-shadow: 0px 5px 5px -2px #666;
 }
 .short_offer label {color: white;font-family: "Oswald",sans-serif;font-weight: 300;margin: 5px -3px;padding: 0 0 0 37px;text-align: left;}
-.dropdown-header {font-size: 16px;}
+.dropdown-header {font-size: 16px; color: #0074d8;}
 .linksSlider a:hover {color:white !important;}
 .simH1 {font-family: 'Roboto Condensed', sans-serif !important;color: #0074d8;font-size: 3em !important;margin: 70px 0 50px;border-bottom: 1px solid #d5d5d5 !important;padding: 0 0 20px;text-align: center;text-transform: uppercase;}
 .simH2 > p {text-align: center !important;}
@@ -146,7 +146,7 @@ footer input[type="text"] {font-family: 'Roboto Condensed', sans-serif;}
 .btn-danger:hover {background-color: #0074d8;border:1px solid #0074d8;}
 .book, .book:hover, .book:focus {color: #fff;background-color: #ff6600;border-color: #ff6600;}
 .hotelDining,.hotelActivities {margin-bottom: 50px;}
-.hotelDiningTitulo strong {text-transform: uppercase;color:#0074d8;font-family: 'oswald';}
+/*.hotelDiningTitulo strong {text-transform: uppercase;color:#0074d8;font-family: 'oswald';}*/
 .dining_description, .activity_description {text-align: justify;margin-top: 15px;}
 .offersHotels {display: block;font-family: "Oswald",sans-serif;margin: 0px 0;}
 .offersPorcentage {font-size: 26px !important;}
